--- a/ui/app.css
+++ b/ui/app.css
@@ -457,6 +457,9 @@
   .mb-4 {
     margin-bottom: calc(var(--spacing) * 4);
   }
+  .mb-6 {
+    margin-bottom: calc(var(--spacing) * 6);
+  }
   .-ml-px {
     margin-left: -1px;
   }
@@ -2243,6 +2246,11 @@
   .disabled\:text-slate-500 {
     &:disabled {
       color: var(--color-slate-500);
+    }
+  }
+  .disabled\:opacity-50 {
+    &:disabled {
+      opacity: 50%;
     }
   }
   .disabled\:shadow-none {
