--- a/llms/ui/tailwind.input.css
+++ b/llms/ui/tailwind.input.css
@@ -1,6 +1,6 @@
 /* tailwindcss -i ./tailwind.input.css -o ./ui/app.css --watch */
 @import "tailwindcss";
-@source "./lib/servicestack-vue.min.mjs";
+@source "./lib/servicestack-vue.mjs";
 
 @custom-variant dark (&:where(.dark, .dark *));
 
