--- a/llms/ui/app.css
+++ b/llms/ui/app.css
@@ -1605,14 +1605,6 @@
   .text-white {
     color: var(--color-white);
   }
-  .text-white\/70 {
-    color: color-mix(in srgb, #fff 70%, transparent);
-    @supports (color: color-mix(in lab, red, red)) {
-      & {
-        color: color-mix(in oklab, var(--color-white) 70%, transparent);
-      }
-    }
-  }
   .text-yellow-400 {
     color: var(--color-yellow-400);
   }
@@ -2103,18 +2095,6 @@
       }
     }
   }
-  .hover\:bg-white\/20 {
-    &:hover {
-      @media (hover: hover) {
-        background-color: color-mix(in srgb, #fff 20%, transparent);
-        @supports (color: color-mix(in lab, red, red)) {
-          & {
-            background-color: color-mix(in oklab, var(--color-white) 20%, transparent);
-          }
-        }
-      }
-    }
-  }
   .hover\:bg-yellow-50 {
     &:hover {
       @media (hover: hover) {
@@ -2266,13 +2246,6 @@
     &:hover {
       @media (hover: hover) {
         color: var(--color-sky-800);
-      }
-    }
-  }
-  .hover\:text-white {
-    &:hover {
-      @media (hover: hover) {
-        color: var(--color-white);
       }
     }
   }
@@ -3914,6 +3887,10 @@
     border: 1px solid #3b83f680;
     border-radius: .25rem;
     padding: .2rem .25rem .1rem .25rem;
+  }
+  .dark .message em {
+    background-color: rgb(30 58 138);
+    color: rgb(243 244 246);
   }
   .prose {
     max-width: none;
